Performing some refactorings.