@@ -174,11 +174,8 @@ public class InternalTestRunner extends TestRunner {
 
         Object runner = null;
         try {
-            runner = runnerClass.newInstance();
-        } catch (InstantiationException e) {
-            Logger.error("Could not instantiate isolated test runner: " + e);
-            System.exit(-1);
-        } catch (IllegalAccessException e) {
+            runner = runnerClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
             Logger.error("Could not instantiate isolated test runner: " + e);
             System.exit(-1);
         }
@@ -210,10 +207,8 @@ public class InternalTestRunner extends TestRunner {
         if (threadsAfter != threadsBefore) {
             Logger.warn("Possible hanging threads remain after test");
         }
-        
-        UnitTestResult res = (UnitTestResult) result;
 
-        return res;
+        return (UnitTestResult) result;
 
     }
 
